@@ -129,69 +129,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.11</version>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>check</id>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <rule>
-                                    <element>BUNDLE</element>
-                                    <limits>
-                                        <limit>
-                                            <counter>INSTRUCTION</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>0.65</minimum>
-                                        </limit>
-                                    </limits>
-                                </rule>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        @{argLine}
-                        --add-opens nextentity.core/io.github.nextentity.test.db=ALL-UNNAMED
-                        --add-opens nextentity.core/io.github.nextentity.test.entity=ALL-UNNAMED
-                        --add-opens nextentity.core/io.github.nextentity.test.fixtures=ALL-UNNAMED
-                        --add-opens nextentity.core/io.github.nextentity.integration=ALL-UNNAMED
-                        --add-opens nextentity.core/io.github.nextentity.integration.config=ALL-UNNAMED
-                        --add-opens nextentity.core/io.github.nextentity.integration.entity=ALL-UNNAMED
-                        --add-opens nextentity.core/io.github.nextentity.integration.config.fixtures=ALL-UNNAMED
-                        --add-opens nextentity.core/io.github.nextentity.jdbc=ALL-UNNAMED
-                        --add-opens nextentity.core/io.github.nextentity.core=ALL-UNNAMED
-                        --add-opens nextentity.core/io.github.nextentity.core.meta=ALL-UNNAMED
-                        --add-opens nextentity.core/io.github.nextentity.core.reflect=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
